<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="fragment.DayStatistical">

    <android.support.v7.widget.CardView
        android:id="@+id/rblbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/rblbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/rckbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/rckbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/rgkbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/rgkbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/rccgkbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/rccgkbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/rcbdbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/rcbdbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/rjhbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/rjhbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/raqtj"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/raqtj" />

    </android.support.v7.widget.CardView>

</LinearLayout>
