<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="fragment.YearStatistical">

    <android.support.v7.widget.CardView
        android:id="@+id/nblbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/nblbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/nckbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/nckbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/ngkbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/ngkbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/nccgkbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/nccgkbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/ncbdbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/ncbdbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/njhbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/njhbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/naqtj"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/naqtj" />

    </android.support.v7.widget.CardView>

</LinearLayout>
