<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="fragment.MonthStatistical">

    <android.support.v7.widget.CardView
        android:id="@+id/yblbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/yblbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/yckbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/yckbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/ygkbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/ygkbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/yccgkbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/yccgkbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/ycbdbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/ycbdbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/yjhbb"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/yjhbb" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/yaqtj"
        app:cardCornerRadius="@dimen/qb_px_10"
        app:cardElevation="@dimen/qb_px_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qb_px_10"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_10"
            android:text="@string/yaqtj" />

    </android.support.v7.widget.CardView>

</LinearLayout>
